# acatome-meta

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
src/acatome_meta/: __init__.py  citations.py  config.py  crossref.py  literature.py  lookup.py  pdf.py  semantic_scholar.py  verify.py
tests/: conftest.py  test_config.py  test_crossref.py  test_literature.py  test_lookup.py  test_pdf.py  test_verify.py
