[project]
name = "acatome-meta"
version = "0.1.0"
description = "Lightweight metadata lookup for scientific papers"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["metadata", "doi", "crossref", "semantic-scholar", "scientific-papers", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-meta"
Repository = "https://github.com/acatome/acatome-meta"
Issues = "https://github.com/acatome/acatome-meta/issues"

dependencies = [
    "PyMuPDF>=1.24",
    "habanero>=1.2",
    "semanticscholar>=0.8",
    "tenacity>=8.0",
    "rapidfuzz>=3.0",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_meta"]
