[project]
name = "acatome-meta"
version = "0.2.2"
description = "Lightweight metadata lookup for scientific papers"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
readme = "README.md"
keywords = ["metadata", "doi", "crossref", "semantic-scholar", "scientific-papers", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "PyMuPDF>=1.24",
    "habanero>=1.2",
    "semanticscholar>=0.8",
    "tenacity>=8.0",
    "rapidfuzz>=3.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-meta"
Repository = "https://github.com/acatome/acatome-meta"
Issues = "https://github.com/acatome/acatome-meta/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_meta"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.2.2"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/acatome_meta/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
