[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-meta"
version = "0.2.2"
description = "Lightweight metadata lookup for scientific papers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["metadata", "doi", "crossref", "semantic-scholar", "scientific-papers", "pdf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyMuPDF>=1.24",
    "habanero>=1.2",
    "semanticscholar>=0.8",
    "tenacity>=8.0",
    "rapidfuzz>=3.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/retospect/acatome-meta"
Repository = "https://github.com/retospect/acatome-meta"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_meta"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
